Remove v4 flavor and move mailbox view v4 UI to main
We will not use the v4 flavor and instead we will work on v4 on a separate branch.

MAILAND-1495

#comment Affected: Mailbox view UI

--- a/app/src/main/res/drawable/circle_background_interaction_weak.xml
+++ b/app/src/main/res/drawable/circle_background_interaction_weak.xml
@@ -18,25 +18,10 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
+<shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:shape="oval">
 
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
+    <solid android:color="@color/interaction_weak" />
 
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+</shape>
