--- a/app/src/main/res/drawable/ic_draft.xml
+++ b/app/src/main/res/drawable/ic_draft.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,25 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M11.261,2.0001L14.5936,5.336L6.0734,13.8514L2,14.5931L2.741,10.5153L11.261,2.0001ZM11.2605,3.4569L9.8325,4.884L11.7092,6.7626L13.1372,5.3354L11.2605,3.4569ZM4.0282,10.6851L9.104,5.6121L10.9807,7.4907L5.9048,12.5636L4.0282,10.6851ZM3.5743,11.6881L3.2791,13.3128L4.9021,13.0173L3.5743,11.6881Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+</vector>
