--- a/app/src/main/res/drawable/ic_inbox.xml
+++ b/app/src/main/res/drawable/ic_inbox.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,25 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M15,6L12.44,2H3.56L1,6.07V13H15V6ZM4.11,3H11.89L13.77,6H11V8H5V6H2.23L4.11,3ZM14,12H2V7H4V9H12V7H14V12Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+</vector>
