--- a/app/src/main/res/drawable/ic_reply.xml
+++ b/app/src/main/res/drawable/ic_reply.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,25 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M13.33,7.17C12.5387,6.4325 11.5015,6.0155 10.42,6H8V3.23L2.09,7.94L8,12.8V10H10.71C11.3824,9.8994 12.0687,10.0374 12.65,10.39C13.0243,10.7098 13.3599,11.0723 13.65,11.47L14.53,12.71V10.04C14.5336,8.9606 14.1008,7.9255 13.33,7.17ZM13.26,9.6C12.5063,9.0992 11.5977,8.8863 10.7,9H7V10.68L3.68,8L7,5.3V7H10.39C11.2223,7.0089 12.0225,7.3219 12.64,7.88C13.1768,8.4125 13.4974,9.125 13.54,9.88L13.26,9.6Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+</vector>
