--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,25 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M3.03,6.8707C3.03,4.7496 4.7496,3.03 6.8707,3.03C8.9919,3.03 10.7115,4.7496 10.7115,6.8707C10.7115,8.9919 8.9919,10.7115 6.8707,10.7115C4.7496,10.7115 3.03,8.9919 3.03,6.8707ZM6.8707,2C4.1807,2 2,4.1807 2,6.8707C2,9.5608 4.1807,11.7415 6.8707,11.7415C8.0302,11.7415 9.0951,11.3364 9.9315,10.6599L13.318,14.0464L14.0463,13.3181L10.6598,9.9316C11.3363,9.0952 11.7415,8.0303 11.7415,6.8707C11.7415,4.1807 9.5608,2 6.8707,2Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+</vector>
