--- a/app/src/main/res/drawable/list_divider.xml
+++ b/app/src/main/res/drawable/list_divider.xml
@@ -18,25 +18,12 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
+<shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:shape="rectangle">
 
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
+    <solid android:color="@color/separator_norm" />
 
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
+    <size android:height="2px" />
 
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+</shape>
