--- a/app/src/main/res/drawable/ripple_background_norm.xml
+++ b/app/src/main/res/drawable/ripple_background_norm.xml
@@ -18,25 +18,9 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/background_secondary">
 
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
+    <item android:drawable="@color/background_norm" />
 
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+</ripple>
