--- a/app/src/main/res/drawable/selector_circle_background_interaction_weak.xml
+++ b/app/src/main/res/drawable/selector_circle_background_interaction_weak.xml
@@ -18,25 +18,14 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
+        android:drawable="@drawable/circle_background_interaction_weak"
+        android:state_pressed="false" />
 
     <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
+        android:drawable="@drawable/circle_background_interaction_weak_pressed"
+        android:state_pressed="true" />
 
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+</selector>
