--- a/app/src/main/res/layout/activity_mailbox.xml
+++ b/app/src/main/res/layout/activity_mailbox.xml
@@ -1,169 +1,143 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
 
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     android:fitsSystemWindows="true"
     tools:context=".activities.mailbox.MailboxActivity">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <include
+            layout="@layout/toolbar_mailbox"
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/toolbar" />
+        <include
+            layout="@layout/layout_mailbox_status_view"
+            android:id="@+id/mailboxStatusLayout"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/mailbox_status_view_height"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
-            <ch.protonmail.android.views.alerts.StorageLimitAlert
-                android:id="@+id/storageLimitAlert"
+        <!-- TODO: Should be removed and replaced with MAILAND-1503 -->
+        <ch.protonmail.android.views.alerts.StorageLimitAlert
+            android:id="@+id/storageLimitAlert"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mailboxStatusLayout"
+            android:visibility="gone" />
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/mailboxSwipeRefreshLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/storageLimitAlert">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/mailboxRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                tools:listitem="@layout/list_item_mailbox" />
 
-            <FrameLayout
-                android:id="@+id/swipe_refresh_wrapper"
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <!-- TODO: Should be removed and replaced with MAILAND-1549 -->
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/noMessagesSwipeRefreshLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/storageLimitAlert"
+            android:visibility="gone">
+
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                    android:id="@+id/swipe_refresh_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/mailboxRecyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="@null"
-                        tools:listitem="@layout/messages_list_item_new" />
-
-                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-                <View
-                    android:id="@+id/screenProtectorView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:clickable="true"
-                    android:focusable="true" />
-
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/layout_sync"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/rain_gray_50"
-                android:padding="5dp"
-                android:visibility="gone">
-
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="@string/syncing_messages"
-                    android:textColor="@color/white"
-                    android:textStyle="italic"
-                    app:fontName="Roboto-Light.ttf" />
-            </FrameLayout>
+                    android:text="@string/no_messages"
+                    style="@style/Text.Caption.Hint" />
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/spinner_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            </ScrollView>
 
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-                    <ProgressBar
-                        android:id="@+id/spinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center" />
+        <!-- TODO: Should be removed and replaced with MAILAND-1497 -->
+        <FrameLayout
+            android:id="@+id/layout_no_connectivity_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-                </ScrollView>
-
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/no_messages_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone">
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/no_messages"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/no_messages" />
-
-                </ScrollView>
-
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/shadow_height"
-                android:background="@drawable/actionbar_shadow" />
-
-            <TextView
-                android:id="@+id/move_to_trash"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:background="@android:color/transparent"
-                android:text="@string/trash_icon"
-                android:visibility="gone" />
-
-            <FrameLayout
-                android:id="@+id/layout_no_connectivity_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <View
+            android:id="@+id/screenProtectorView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="@id/mailboxSwipeRefreshLayout"
+            app:layout_constraintRight_toRightOf="@id/mailboxSwipeRefreshLayout"
+            app:layout_constraintTop_toTopOf="@id/mailboxSwipeRefreshLayout"
+            app:layout_constraintBottom_toBottomOf="@id/mailboxSwipeRefreshLayout"
+            android:background="@android:color/transparent"
+            android:clickable="true"
+            android:focusable="true" />
 
         <View
             android:id="@+id/screenShotPreventerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/background_norm"
             android:clickable="true"
             android:focusable="true"
             android:visibility="gone" />
 
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include layout="@layout/navigation_drawer" />
 
