--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -34,9 +34,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:divider="@null"
-		tools:listitem="@layout/messages_list_item_new"
-	/>
+		tools:listitem="@layout/list_item_mailbox" />
 
     <TextView
         android:id="@+id/no_messages"
