--- a/app/src/main/res/layout/layout_compose_action.xml
+++ b/app/src/main/res/layout/layout_compose_action.xml
@@ -18,25 +18,19 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="@dimen/toolbar_action_layout_size"
+    android:layout_height="@dimen/toolbar_action_layout_size">
 
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
+    <ImageButton
+        android:id="@+id/composeImageButton"
+        android:layout_width="@dimen/button_nav_size"
+        android:layout_height="@dimen/button_nav_size"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_compose"
+        android:tint="@color/icon_inverted"
+        android:background="@drawable/selector_circle_background_interaction_strong"
+        android:contentDescription="@string/compose" />
 
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+</FrameLayout>
