--- a/app/src/main/res/layout/toolbar_mailbox.xml
+++ b/app/src/main/res/layout/toolbar_mailbox.xml
@@ -18,25 +18,15 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<menu
+<androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/search"
-        android:title="@string/search"
-        app:actionLayout="@layout/layout_search_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/compose"
-        android:title="@string/compose_message"
-        app:actionLayout="@layout/layout_compose_action"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/empty"
-        android:title="@string/empty_folder"
-        app:showAsAction="never" />
-
-</menu>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:minHeight="?attr/actionBarSize"
+    android:paddingStart="@dimen/action_bar_padding_start"
+    android:paddingEnd="@dimen/action_bar_padding_end"
+    app:contentInsetStartWithNavigation="0dp"
+    app:navigationIcon="@drawable/ic_hamburger"
+    app:titleTextAppearance="@style/Text.Headline.Small"
+    android:background="@color/background_norm" />
