--- a/app/src/main/res/drawable/ic_arrow_back.xml
+++ b/app/src/main/res/drawable/ic_arrow_back.xml
@@ -23,7 +23,7 @@
     android:viewportWidth="16"
     android:viewportHeight="16">
   <path
-      android:pathData="M15.07,6.2999L10.19,5.5899L8,1.1599L5.81,5.5899L0.93,6.2999L4.46,9.7499L3.63,14.6199L8,12.3199L12.37,14.6199L11.54,9.7499L15.07,6.2999Z"
-      android:fillColor="@color/notification_warning"
+      android:pathData="M14,8H3.21L7.69,3.52L6.98,2.81L1.29,8.5L6.98,14.19L7.69,13.48L3.21,9H14V8Z"
+      android:fillColor="@color/icon_norm"
       android:fillType="evenOdd"/>
 </vector>
