--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,9 +21,10 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <!-- V4 -->
     <dimen name="toolbar_action_layout_size">48dp</dimen>
+    <dimen name="toolbar_action_layout_icon_size">24dp</dimen>
 
-    <dimen name="action_bar_padding_start">0dp</dimen>
-    <dimen name="action_bar_padding_end">8dp</dimen>
+    <dimen name="toolbar_padding_start">0dp</dimen>
+    <dimen name="toolbar_padding_end">8dp</dimen>
     <dimen name="action_bar_elevation">8dp</dimen>
     <dimen name="action_bar_no_elevation">0dp</dimen>
 
@@ -45,6 +46,22 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <dimen name="message_number_view_padding_horizontal">8dp</dimen>
     <dimen name="message_number_view_padding_vertical">2dp</dimen>
+
+    <dimen name="expanded_toolbar_title_margin_bottom">8dp</dimen>
+    <dimen name="expanded_toolbar_title_padding_horizontal">24dp</dimen>
+
+    <dimen name="message_details_header_padding_horizontal">16dp</dimen>
+    <dimen name="message_details_header_padding_vertical">12dp</dimen>
+    <dimen name="message_details_header_views_margin_normal">8dp</dimen>
+    <dimen name="message_details_header_views_margin_small">4dp</dimen>
+    <dimen name="message_details_header_small_icon_size">16dp</dimen>
+
+    <dimen name="message_details_banner_height">48dp</dimen>
+    <dimen name="message_details_banner_margin_horizontal">16dp</dimen>
+    <dimen name="message_details_banner_drawable_padding">8dp</dimen>
+    <dimen name="message_details_banner_small_icon_size">16dp</dimen>
+
+    <dimen name="divider_size">2px</dimen>
     <!-- V4 -->
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
